--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Ofereço serviço de Web Designer" />
+    <meta name="description" content="Projetos de T.I de Icaro" />
     <meta name="author" content="Icaro Rodrigues Shimazu" />
     
 
     <meta property="og:title" content="Projetos do Icaro">
     <meta property="og:description" content="Esta é uma demonstração dos meus projetos ao decorrer da minha jornada">
-<meta property="og:image" content="https://raw.githubusercontent.com/CamilleSecrets/Shimazu/main/fly/og.png">
+<meta property="og:image" content="https://camillesecrets.github.io/Projetos/fly/og.png">
 
 
     <title>Projeto de Icaro</title>
