--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@ body{
 }
 
 
-
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+}
 
 
 .video-container {
