--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@ body{
 <!-- Masthead-->
 <header class="masthead text-white text-center" style="margin-top: -165px;" >
     <div class="container d-flex align-items-center flex-column">
-        <div class="video-container">
-            <iframe width="560" height="315" style="margin-top: 30px;" src="https://www.youtube.com/embed/WCqBg5wqmS0?si=ISlV5Xu-nFrRU52r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="video-container" style="margin-top: 80px;">
+            <iframe width="560" height="315"  src="https://www.youtube.com/embed/WCqBg5wqmS0?si=ISlV5Xu-nFrRU52r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>      
             
-            <h1 style="margin-top: 50px;" class=" img-fluid text-uppercase mb-0"><img src="fly/logo.png">
+            <h1 style="margin-top: 70px;" class=" img-fluid text-uppercase mb-0"><img src="fly/logo.png">
         </h1>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
