--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 
     <meta property="og:title" content="Projetos do Icaro">
-    <meta property="og:description" content="Esta é uma demonstração dos meus projetos ao decorrer da minha jornada">
+    <meta property="og:description" content="Esta é uma demonstração dos meus projetos, e normal o loading demorar um pouco">
 <meta property="og:image" content="https://camillesecrets.github.io/Projetos/fly/og.png">
 
 
