--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@ body{
         .hidden {
             display: none;
         }
+       .modal-backdrop.show {
+  opacity: 0.9; /* ou o valor que quiser */
+  z-index: 1040 !important;
+}
+
+.modal.show {
+  z-index: 1050 !important;
+}
    </style>
 </head>
 
