--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
    <style>
 
 body{
+      overflow: auto !important;
+  position: static !important;
     height: 100%;
   margin: 0;
   padding: 0;
