--- a/index.html
+++ b/index.html
@@ -366,9 +366,11 @@ body{
           <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
           <div class="divider-custom-line"></div>
         </div>
+          <div class="justify-content-center">
         <div class="video-container mb-4">
           <iframe class="responsive-iframe" src="https://www.youtube.com/embed/6Z79fOVQrfI?si=0ZL-VlUP3ZgiaCKo" title="YouTube video player" allowfullscreen></iframe>
         </div>
+          </div>
         <h5><strong>Esses são meus projetos em HTML, CSS e Javascript</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal">
           <i class="fas fa-xmark fa-fw"></i> Fechar janela
@@ -386,8 +388,11 @@ body{
       <div class="modal-body text-center">
         <h2 class="portfolio-modal-title text-uppercase text-secondary mb-4">Projeto 2</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="video-container mb-4"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/Dklrf10nk7o?si=0DYTF_lNVQhH7TAq" allowfullscreen></iframe></div>
-        <h5><strong>Projeto usando Node.js e React.js para um E-Commerce (incompleto)</strong></h5>
+                  <div class="justify-content-center">
+
+          <div class="video-container mb-4"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/Dklrf10nk7o?si=0DYTF_lNVQhH7TAq" allowfullscreen></iframe></div>
+                  </div>
+                <h5><strong>Projeto usando Node.js e React.js para um E-Commerce (incompleto)</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
     </div>
@@ -401,8 +406,12 @@ body{
       <div class="modal-body text-center">
         <h2 class="portfolio-modal-title text-uppercase text-secondary mb-4">Projeto 3</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="video-container mb-4"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/rdXlVZABsCs?si=MDEn-pfCcZ6yiEet" allowfullscreen></iframe></div>
-        <h5><strong>Projeto desktop usando JavaFX</strong></h5>
+        
+                    <div class="justify-content-center">
+
+          <div class="video-container mb-4"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/rdXlVZABsCs?si=MDEn-pfCcZ6yiEet" allowfullscreen></iframe></div>
+                    </div>
+                        <h5><strong>Projeto desktop usando JavaFX</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
     </div>
@@ -416,8 +425,11 @@ body{
       <div class="modal-body text-center">
         <h2 class="portfolio-modal-title text-uppercase text-secondary mb-4">Projeto 4</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="video-container mb-4"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/kaQ21zzBSRQ?si=0zJYfxcsgIufzFyY" allowfullscreen></iframe></div>
-        <h5><strong>Aplicação web completa em Spring Boot (Desafio da Ada)</strong></h5>
+                  <div class="justify-content-center">
+
+          <div class="video-container mb-4"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/kaQ21zzBSRQ?si=0zJYfxcsgIufzFyY" allowfullscreen></iframe></div>
+                  </div>
+                      <h5><strong>Aplicação web completa em Spring Boot (Desafio da Ada)</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
     </div>
@@ -430,9 +442,13 @@ body{
       <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
       <div class="modal-body text-center">
         <h2 class="portfolio-modal-title text-uppercase text-secondary mb-4">Projeto 5</h2>
-        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+                  <div class="justify-content-center">
+
+          <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+        
         <div class="video-container mb-4"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/Wi3Kys17v70?si=f1e5FVRXfG7Gq6EW" allowfullscreen></iframe></div>
-        <h5><strong>Back-end do projeto 4 em Spring Boot</strong></h5>
+                  </div>
+                      <h5><strong>Back-end do projeto 4 em Spring Boot</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
     </div>
@@ -446,13 +462,34 @@ body{
       <div class="modal-body text-center">
         <h2 class="portfolio-modal-title text-uppercase text-secondary mb-4">Projeto 6</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="video-container mb-4"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/SEU-LINK-AQUI" allowfullscreen></iframe></div>
-        <h5><strong>Descrição do projeto 6</strong></h5>
+                  <div class="justify-content-center">
+
+          <div class="video-container mb-4"><iframe width="560" height="315" src="https://www.youtube.com/embed/PeWQL_bShmA?si=iSMk1FCEaEF9xLuf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                  </div>
+                      <h5><strong>Minha primeira aplicação desktop com javaFX</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
     </div>
   </div>
 </div>
+                    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-labelledby="portfolioModal6Label" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content rounded-4 shadow">
+      <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
+      <div class="modal-body text-center">
+        <h2 class="portfolio-modal-title text-uppercase text-secondary mb-4">Projeto 7</h2>
+        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+                  <div class="justify-content-center">
+
+          <div class="video-container mb-4"><iframe width="560" height="315" src="https://www.youtube.com/embed/ttEas1pFiK4?si=wQZVJegu8XAG1i7f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                  </div>
+                      <h5><strong>Aplicação desktop de um lancher gamer em C#</strong></h5>
+        <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
