--- a/index.html
+++ b/index.html
@@ -76,8 +76,15 @@ body{
     border-radius: 8px;
   display: flex;
   justify-content: center;
+    text-aling: center;
 }
-
+.responsive-iframe {
+    display: block;       /* Transforma o iframe em um elemento de bloco */
+    margin-left: auto;    /* Empurra para a direita */
+    margin-right: auto;   /* Empurra para a esquerda, centralizando */
+    max-width: 100%;
+    height: auto;
+}
 .video-container iframe,
 .video-container object,
 .video-container embed {
@@ -454,7 +461,7 @@ body{
         <h2 class="portfolio-modal-title text-uppercase text-secondary mb-4">Projeto 6</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
 
-          <div class="video-container mb-4"><iframe width="560" height="315" src="https://www.youtube.com/embed/PeWQL_bShmA?si=iSMk1FCEaEF9xLuf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+          <div class="video-container mb-4"><iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/PeWQL_bShmA?si=iSMk1FCEaEF9xLuf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
                       <h5><strong>Minha primeira aplicação desktop com javaFX</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
@@ -469,7 +476,7 @@ body{
         <h2 class="portfolio-modal-title text-uppercase text-secondary mb-4">Projeto 7</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
 
-          <div class="video-container mb-4"><iframe width="560" height="315" src="https://www.youtube.com/embed/ttEas1pFiK4?si=wQZVJegu8XAG1i7f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+          <div class="video-container mb-4"><iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/ttEas1pFiK4?si=wQZVJegu8XAG1i7f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
                       <h5><strong>Aplicação desktop de um lancher gamer em C#</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
