--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@ body{
 .video-container embed {
   position: absolute;
         aspect-ratio: 16 / 9;
-
-  top: 0;
-  left: 0;
+ left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 100%;
   width: 100%;
   height: 100%;
 }
