--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ body{
         <h2 class="text-uppercase text-secondary mb-4">Projeto 1</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 720px; width: 100%;">
+          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
             <iframe src="https://www.youtube.com/embed/6Z79fOVQrfI?si=0ZL-VlUP3ZgiaCKo" allowfullscreen></iframe>
           </div>
         </div>
@@ -389,7 +389,7 @@ body{
         <h2 class="text-uppercase text-secondary mb-4">Projeto 2</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 720px; width: 100%;">
+          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
             <iframe src="https://www.youtube.com/embed/Dklrf10nk7o?si=0DYTF_lNVQhH7TAq" allowfullscreen></iframe>
           </div>
         </div>
@@ -409,7 +409,7 @@ body{
         <h2 class="text-uppercase text-secondary mb-4">Projeto 3</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 720px; width: 100%;">
+          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
             <iframe src="https://www.youtube.com/embed/rdXlVZABsCs?si=MDEn-pfCcZ6yiEet" allowfullscreen></iframe>
           </div>
         </div>
@@ -429,7 +429,7 @@ body{
         <h2 class="text-uppercase text-secondary mb-4">Projeto 4</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 720px; width: 100%;">
+          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
             <iframe src="https://www.youtube.com/embed/kaQ21zzBSRQ?si=0zJYfxcsgIufzFyY" allowfullscreen></iframe>
           </div>
         </div>
@@ -449,7 +449,7 @@ body{
         <h2 class="text-uppercase text-secondary mb-4">Projeto 5</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 720px; width: 100%;">
+          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
             <iframe src="https://www.youtube.com/embed/Wi3Kys17v70?si=f1e5FVRXfG7Gq6EW" allowfullscreen></iframe>
           </div>
         </div>
@@ -469,7 +469,7 @@ body{
         <h2 class="text-uppercase text-secondary mb-4">Projeto 6</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 720px; width: 100%;">
+          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
             <iframe src="https://www.youtube.com/embed/PeWQL_bShmA?si=iSMk1FCEaEF9xLuf" allowfullscreen></iframe>
           </div>
         </div>
@@ -489,7 +489,7 @@ body{
         <h2 class="text-uppercase text-secondary mb-4">Projeto 7</h2>
         <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 720px; width: 100%;">
+          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
             <iframe src="https://www.youtube.com/embed/ttEas1pFiK4?si=wQZVJegu8XAG1i7f" allowfullscreen></iframe>
           </div>
         </div>
