--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ body{
             <iframe src="https://www.youtube.com/embed/PeWQL_bShmA?si=iSMk1FCEaEF9xLuf" allowfullscreen></iframe>
           </div>
         </div>
-        <h5><strong>Minha primeira aplicação desktop com JavaFX</strong></h5>
+        <h5><strong>Aplicação desktop de um launcher gamer em C#</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
     </div>
@@ -493,7 +493,7 @@ body{
             <iframe src="https://www.youtube.com/embed/ttEas1pFiK4?si=wQZVJegu8XAG1i7f" allowfullscreen></iframe>
           </div>
         </div>
-        <h5><strong>Aplicação desktop de um launcher gamer em C#</strong></h5>
+        <h5><strong>Minha primeira aplicação em JavaFX</strong></h5>
         <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
       </div>
     </div>
